k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shree-shyam
  labels:
    app: shree-shyam-dairy-farm
