k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssd-app
  namespace: shree-shyam
  labels:
    app: ssd-app
spec:
  type: ClusterIP
  selector:
    app: ssd-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
